--- a/xAct/Hamilcar/Logos/GitHubLogo.tex
+++ b/xAct/Hamilcar/Logos/GitHubLogo.tex
@@ -6,6 +6,7 @@
 \usepackage{xspace}
 \usepackage{amsmath}
 \usepackage[dvipsnames]{xcolor}
+\usepackage{calc}
 \input{Macros.tex}
 \input{MacrosNames.tex}
 \begin{document}
@@ -16,6 +17,9 @@
 ]
 % Padding (in screen coordinates)
 \path[use as bounding box] (-0.5cm,-0.5cm) rectangle (20cm,5.5cm);
+
+% Pale blue background
+\fill[blue!5] (-0.5cm,-0.5cm) rectangle (20cm,5.5cm);
 
 \foreach \xoffset in {0, 14} {
 \begin{scope}[shift={(\xoffset,0,0)}]
@@ -37,78 +41,18 @@
 \def\maxsigma{0.6}
 \def\maxamplitude{1.0}
 \def\minamplitude{0.4}
-\def\patchsize{0.15}
+\def\patchsize{0.5}
 % Spiral modulation: r0 -> r0 + spiralamp * sin(spiralarms * theta + spiralradial * r)
 \def\spiralamp{0.5}
-\def\spiralarms{5}
-\def\spiralradial{6}
+\def\spiralarms{2}
+\def\spiralradial{15}
 
 % Vertical faces - colored for left figure, plain for right figure
-\def\vpatchsize{0.15}
+\def\vpatchsize{0.5}
 
-\ifnum\xoffset=0
-% Front face (y=0): x varies, z varies - curved top/bottom edges
-\foreach \xx in {0,\vpatchsize,...,\xsize} {
-    \foreach \zz in {0,\vpatchsize,...,\zmax} {
-        % Map z to time fraction
-        \pgfmathsetmacro{\tfracv}{\zz/\zmax}
-        % Ring parameters at this height
-        \pgfmathsetmacro{\ringradv}{\tfracv*\maxringradius}
-        \pgfmathsetmacro{\ringsigv}{\minsigma + \tfracv*(\maxsigma - \minsigma)}
-        \pgfmathsetmacro{\ampv}{\maxamplitude - \tfracv*(\maxamplitude - \minamplitude)}
-        % Position relative to center (y=0 means cy = -ysize/2)
-        \pgfmathsetmacro{\cxv}{\xx - \xsize/2}
-        \pgfmathsetmacro{\cyv}{0 - \ysize/2}
-        \pgfmathsetmacro{\rrv}{sqrt(\cxv*\cxv + \cyv*\cyv)}
-        \pgfmathsetmacro{\thetav}{atan2(\cyv, \cxv)}
-        \pgfmathsetmacro{\rmodv}{\ringradv + \spiralamp*sin(\spiralarms*\thetav + \spiralradial*\rrv*180/3.14159)}
-        \pgfmathsetmacro{\gaussv}{\ampv*exp(-((\rrv - \rmodv)/\ringsigv)^2)}
-        \pgfmathsetmacro{\colvalv}{15 + \gaussv*85}
-        \pgfmathsetmacro{\xxpv}{min(\xx + \vpatchsize, \xsize)}
-        \pgfmathsetmacro{\zzpv}{min(\zz + \vpatchsize, \zmax)}
-        % Curved offsets at bottom (z=0) and top (z=zmax)
-        \pgfmathsetmacro{\zbotcurve}{\curvature*sin(\xx*180/\xsize)}
-        \pgfmathsetmacro{\zbotcurvep}{\curvature*sin(\xxpv*180/\xsize)}
-        \pgfmathsetmacro{\ztopcurve}{\zmax + \curvature*sin(\xx*180/\xsize)}
-        \pgfmathsetmacro{\ztopcurvep}{\zmax + \curvature*sin(\xxpv*180/\xsize)}
-        % Interpolate z coordinates based on position
-        \pgfmathsetmacro{\zbot}{\zbotcurve + (\zz/\zmax)*(\ztopcurve - \zbotcurve)}
-        \pgfmathsetmacro{\zbotp}{\zbotcurvep + (\zz/\zmax)*(\ztopcurvep - \zbotcurvep)}
-        \pgfmathsetmacro{\ztop}{\zbotcurve + (\zzpv/\zmax)*(\ztopcurve - \zbotcurve)}
-        \pgfmathsetmacro{\ztopp}{\zbotcurvep + (\zzpv/\zmax)*(\ztopcurvep - \zbotcurvep)}
-        \fill[blue!\colvalv, opacity=0.5] (\xx, 0, \zbot) -- (\xxpv, 0, \zbotp) -- (\xxpv, 0, \ztopp) -- (\xx, 0, \ztop) -- cycle;
-    }
-}
-
-% Right face (x=xsize): y varies, z varies - curved top/bottom edges
-\foreach \yy in {0,\vpatchsize,...,\ysize} {
-    \foreach \zz in {0,\vpatchsize,...,\zmax} {
-        \pgfmathsetmacro{\tfracv}{\zz/\zmax}
-        \pgfmathsetmacro{\ringradv}{\tfracv*\maxringradius}
-        \pgfmathsetmacro{\ringsigv}{\minsigma + \tfracv*(\maxsigma - \minsigma)}
-        \pgfmathsetmacro{\ampv}{\maxamplitude - \tfracv*(\maxamplitude - \minamplitude)}
-        \pgfmathsetmacro{\cxv}{\xsize - \xsize/2}
-        \pgfmathsetmacro{\cyv}{\yy - \ysize/2}
-        \pgfmathsetmacro{\rrv}{sqrt(\cxv*\cxv + \cyv*\cyv)}
-        \pgfmathsetmacro{\thetav}{atan2(\cyv, \cxv)}
-        \pgfmathsetmacro{\rmodv}{\ringradv + \spiralamp*sin(\spiralarms*\thetav + \spiralradial*\rrv*180/3.14159)}
-        \pgfmathsetmacro{\gaussv}{\ampv*exp(-((\rrv - \rmodv)/\ringsigv)^2)}
-        \pgfmathsetmacro{\colvalv}{15 + \gaussv*85}
-        \pgfmathsetmacro{\yypv}{min(\yy + \vpatchsize, \ysize)}
-        \pgfmathsetmacro{\zzpv}{min(\zz + \vpatchsize, \zmax)}
-        % Curved offsets at bottom and top (x=xsize, so sin(180)=0, but y varies)
-        \pgfmathsetmacro{\zbotcurve}{\curvature*sin(180) + \curvature*sin(\yy*180/\ysize)}
-        \pgfmathsetmacro{\zbotcurvep}{\curvature*sin(180) + \curvature*sin(\yypv*180/\ysize)}
-        \pgfmathsetmacro{\ztopcurve}{\zmax + \curvature*sin(180) + \curvature*sin(\yy*180/\ysize)}
-        \pgfmathsetmacro{\ztopcurvep}{\zmax + \curvature*sin(180) + \curvature*sin(\yypv*180/\ysize)}
-        % Interpolate z coordinates
-        \pgfmathsetmacro{\zbot}{\zbotcurve + (\zz/\zmax)*(\ztopcurve - \zbotcurve)}
-        \pgfmathsetmacro{\zbotp}{\zbotcurvep + (\zz/\zmax)*(\ztopcurvep - \zbotcurvep)}
-        \pgfmathsetmacro{\ztop}{\zbotcurve + (\zzpv/\zmax)*(\ztopcurve - \zbotcurve)}
-        \pgfmathsetmacro{\ztopp}{\zbotcurvep + (\zzpv/\zmax)*(\ztopcurvep - \zbotcurvep)}
-        \fill[blue!\colvalv, opacity=0.5] (\xsize, \yy, \zbot) -- (\xsize, \yypv, \zbotp) -- (\xsize, \yypv, \ztopp) -- (\xsize, \yy, \ztop) -- cycle;
-    }
-}
+\ifdim\xoffset pt=0pt
+% Precomputed colored patches for left figure (front face, right face, top slice)
+\input{GitHubLogoPatchesLeft.tex}
 
 % Back faces (lighter, behind)
 \fill[blue!5, opacity=0.2] (0, \ysize, 0) -- (\xsize, \ysize, 0) -- (\xsize, \ysize, \zmax) -- (0, \ysize, \zmax) -- cycle;
@@ -122,86 +66,76 @@
 \fill[blue!5, opacity=0.2] (0, 0, 0) -- (0, \ysize, 0) -- (0, \ysize, \zmax) -- (0, 0, \zmax) -- cycle;
 \fi
 
-% Vertical edges only (no top/bottom frames)
-\ifnum\xoffset=0\else
-\draw[black!50, thick, dashed] (0, \ysize, 0) -- (0, \ysize, \zmax);
+% Vertical edges only (no top/bottom frames) - curved like t-axis
+\ifdim\xoffset pt=0pt\else
+\draw[black!50, thick, dashed] (0, \ysize, 0)
+    \foreach \zz in {0,0.1,...,\zmax} {
+        -- ({0 + 0.5*\curvature*(1 - cos(\zz*180/\zmax))}, {\ysize + 0.5*\curvature*(1 - cos(\zz*180/\zmax))}, \zz)
+    };
 \fi
-\draw[black!50, thick] (\xsize, 0, 0) -- (\xsize, 0, \zmax);
-\draw[black!50, thick] (0, 0, 0) -- (0, 0, \zmax);
-\draw[black!50, thick] (\xsize, \ysize, 0) -- (\xsize, \ysize, \zmax);
+\draw[black!50, thick] (\xsize, 0, 0)
+    \foreach \zz in {0,0.1,...,\zmax} {
+        -- ({\xsize - 0.5*\curvature*(1 - cos(\zz*180/\zmax))}, {0 - 0.5*\curvature*(1 - cos(\zz*180/\zmax))}, \zz)
+    };
+\draw[black!50, thick] (0, 0, 0)
+    \foreach \zz in {0,0.1,...,\zmax} {
+        -- ({0 + 0.5*\curvature*(1 - cos(\zz*180/\zmax))}, {0 - 0.5*\curvature*(1 - cos(\zz*180/\zmax))}, \zz)
+    };
+\draw[black!50, thick] (\xsize, \ysize, 0)
+    \foreach \zz in {0,0.1,...,\zmax} {
+        -- ({\xsize - 0.5*\curvature*(1 - cos(\zz*180/\zmax))}, {\ysize + 0.5*\curvature*(1 - cos(\zz*180/\zmax))}, \zz)
+    };
 
-% Determine starting slice based on position (left figure: only top slice, right figure: all slices)
+% Precomputed horizontal slice patches (right figure only - left figure patches included above)
+\ifdim\xoffset pt=0pt\else
+\input{GitHubLogoPatchesRight.tex}
+\fi
+
+% Draw slice edges - corners offset by vertical curve
 \pgfmathtruncatemacro{\startslice}{\xoffset == 0 ? \nslices : 0}
 \foreach \i in {\startslice,...,\nslices} {
     \pgfmathsetmacro{\zbase}{\i*\sliceheight}
-    \pgfmathsetmacro{\tfrac}{\i/\nslices}
-    % Radius grows from 0 to maxringradius
-    \pgfmathsetmacro{\ringradius}{\tfrac*\maxringradius}
-    % Sigma grows from minsigma to maxsigma
-    \pgfmathsetmacro{\ringsigma}{\minsigma + \tfrac*(\maxsigma - \minsigma)}
-    % Amplitude decreases from maxamplitude to minamplitude
-    \pgfmathsetmacro{\amplitude}{\maxamplitude - \tfrac*(\maxamplitude - \minamplitude)}
+    % Vertical curve offset at this height
+    \pgfmathsetmacro{\vcurve}{0.5*\curvature*(1 - cos(\zbase*180/\zmax))}
 
-    % Draw colored patches
-    \foreach \xx in {0,\patchsize,...,\xsize} {
-        \foreach \yy in {0,\patchsize,...,\ysize} {
-            % Coordinates relative to center
-            \pgfmathsetmacro{\cx}{\xx - \xsize/2}
-            \pgfmathsetmacro{\cy}{\yy - \ysize/2}
-            \pgfmathsetmacro{\rr}{sqrt(\cx*\cx + \cy*\cy)}
-            \pgfmathsetmacro{\thetadeg}{atan2(\cy, \cx)}
-            % Spiral-modulated ring radius
-            \pgfmathsetmacro{\rmod}{\ringradius + \spiralamp*sin(\spiralarms*\thetadeg + \spiralradial*\rr*180/3.14159)}
-            % Annular Gaussian: amplitude * exp(-((r - r0)/sigma)^2)
-            \pgfmathsetmacro{\gaussval}{\amplitude*exp(-((\rr - \rmod)/\ringsigma)^2)}
-            % Interpolate between 15 (pale blue) and 100 (full blue)
-            \pgfmathsetmacro{\colval}{15 + \gaussval*85}
-
-            % Corner heights (clamp to boundary)
-            \pgfmathsetmacro{\z}{\zbase + \curvature*sin(\xx*180/\xsize) + \curvature*sin(\yy*180/\ysize)}
-            \pgfmathsetmacro{\xxp}{min(\xx + \patchsize, \xsize)}
-            \pgfmathsetmacro{\yyp}{min(\yy + \patchsize, \ysize)}
-            \pgfmathsetmacro{\zxp}{\zbase + \curvature*sin(\xxp*180/\xsize) + \curvature*sin(\yy*180/\ysize)}
-            \pgfmathsetmacro{\zyp}{\zbase + \curvature*sin(\xx*180/\xsize) + \curvature*sin(\yyp*180/\ysize)}
-            \pgfmathsetmacro{\zxyp}{\zbase + \curvature*sin(\xxp*180/\xsize) + \curvature*sin(\yyp*180/\ysize)}
-
-            \fill[blue!\colval, opacity=0.7]
-                (\xx, \yy, \z) -- (\xxp, \yy, \zxp) -- (\xxp, \yyp, \zxyp) -- (\xx, \yyp, \zyp) -- cycle;
-        }
-    }
-
-    % Front edge (y=0)
-    \draw[black!60, thick] (0, 0, \zbase)
+    % Front edge (y=0): interpolate x offset from +vcurve at x=0 to -vcurve at x=xsize
+    \draw[black!60, thick] ({0 + \vcurve}, {0 - \vcurve}, \zbase)
         \foreach \xx in {0,0.1,...,\xsize} {
-            -- (\xx, 0, {\zbase + \curvature*sin(\xx*180/\xsize)})
+            -- ({\xx + \vcurve*(1 - 2*\xx/\xsize)}, {0 - \vcurve}, {\zbase + \curvature*sin(\xx*180/\xsize)})
         };
 
-    % Right edge (x=xsize)
-    \draw[black!60, thick] (\xsize, 0, {\zbase + \curvature*sin(180)})
+    % Right edge (x=xsize): interpolate y offset from -vcurve at y=0 to +vcurve at y=ysize
+    \draw[black!60, thick] ({\xsize - \vcurve}, {0 - \vcurve}, {\zbase + \curvature*sin(180)})
         \foreach \yy in {0,0.1,...,\ysize} {
-            -- (\xsize, \yy, {\zbase + \curvature*sin(180) + \curvature*sin(\yy*180/\ysize)})
+            -- ({\xsize - \vcurve}, {\yy + \vcurve*(-1 + 2*\yy/\ysize)}, {\zbase + \curvature*sin(180) + \curvature*sin(\yy*180/\ysize)})
         };
 
-    % Back edge (y=ysize)
-    \draw[black!40, thick] (0, \ysize, {\zbase + \curvature*sin(180)})
+    % Back edge (y=ysize): interpolate x offset from +vcurve at x=0 to -vcurve at x=xsize
+    \draw[black!40, thick] ({0 + \vcurve}, {\ysize + \vcurve}, {\zbase + \curvature*sin(180)})
         \foreach \xx in {0,0.1,...,\xsize} {
-            -- (\xx, \ysize, {\zbase + \curvature*sin(\xx*180/\xsize) + \curvature*sin(180)})
+            -- ({\xx + \vcurve*(1 - 2*\xx/\xsize)}, {\ysize + \vcurve}, {\zbase + \curvature*sin(\xx*180/\xsize) + \curvature*sin(180)})
         };
 
-    % Left edge (x=0)
-    \draw[black!40, thick] (0, 0, \zbase)
+    % Left edge (x=0): interpolate y offset from -vcurve at y=0 to +vcurve at y=ysize
+    \draw[black!40, thick] ({0 + \vcurve}, {0 - \vcurve}, \zbase)
         \foreach \yy in {0,0.1,...,\ysize} {
-            -- (0, \yy, {\zbase + \curvature*sin(\yy*180/\ysize)})
+            -- ({0 + \vcurve}, {\yy + \vcurve*(-1 + 2*\yy/\ysize)}, {\zbase + \curvature*sin(\yy*180/\ysize)})
         };
 }
 
-% Two small black holes above foliation (drawn in screen coordinates)
-\pgfmathsetmacro{\spherezpos}{\zmax + 1.0}
-\node[circle, fill=black, inner sep=3.5pt] (leftbh) at (\xsize/2 - 0.25, \ysize/2, \spherezpos) {};
-\node[circle, fill=black, inner sep=2.5pt] (rightbh) at (\xsize/2 + 0.25, \ysize/2, \spherezpos + 0.2) {};
-% Curved arrows showing orbital motion
-\draw[<-, thick] (leftbh) to[out=160, in=160, looseness=1.7] (rightbh);
-\draw[<-, thick] (rightbh) to[out=-20, in=-20, looseness=1.7] (leftbh);
+% Circular orbit and black holes - positioned diagonally along corner-to-corner line
+\pgfmathsetmacro{\orbitradius}{0.5}
+\pgfmathsetmacro{\orbitz}{\zmax + 1.0}
+% Diagonal angle: from (0,0) to (xsize,ysize) is 45 degrees in the xy plane
+\pgfmathsetmacro{\diagangle}{135}
+% Black hole positions on the circle at opposite ends of diagonal
+\node[circle, fill=black, inner sep=3.5pt] (leftbh) at ({\xsize/2 + \orbitradius*cos(\diagangle+180)}, {\ysize/2 + \orbitradius*sin(\diagangle+180)}, \orbitz) {};
+\node[circle, fill=black, inner sep=2.5pt] (rightbh) at ({\xsize/2 + \orbitradius*cos(\diagangle)}, {\ysize/2 + \orbitradius*sin(\diagangle)}, \orbitz) {};
+% Draw the orbit circle
+\draw[very thick, dotted] ({\xsize/2 + \orbitradius}, \ysize/2, \orbitz)
+    \foreach \a in {10,20,...,360} {
+        -- ({\xsize/2 + \orbitradius*cos(\a)}, {\ysize/2 + \orbitradius*sin(\a)}, \orbitz)
+    };
 
 % x and y axes on bottom edges (curved like foliation, smooth extension)
 \pgfmathsetmacro{\xext}{\xsize + 0.6}
@@ -215,15 +149,29 @@
         -- (\xsize, \yy, {\curvature*sin(180) + \curvature*sin(\yy*180/\ysize)})
     } node[above] {\sffamily\bfseries y};
 
-% Time arrow (on back right vertical edge)
-\draw[->, very thick] (\xsize, \ysize, 0) -- (\xsize, \ysize, \nslices*\sliceheight + 0.5) node[above] {\sffamily\bfseries t};
-
+% Time arrow (on back right vertical edge, slightly curved - starts vertical, curves inward)
+\pgfmathsetmacro{\tarrowext}{\nslices*\sliceheight + 0.5}
+\draw[->, very thick] (\xsize, \ysize, 0)
+    \foreach \zz in {0,0.1,...,\tarrowext} {
+        -- ({\xsize - 0.5*\curvature*(1 - cos(\zz*180/\zmax))}, {\ysize + 0.5*\curvature*(1 - cos(\zz*180/\zmax))}, \zz)
+    } node[above] {\sffamily\bfseries t};
 
 \end{scope}
 }
 
 % Hamilcar title in the center
 \node at (8.5, 1.5, 2.2) {\scalebox{5}{\sffamily\bfseries Hamilcar}};
+
+% Subtitle below - scaled to match Hamilcar width exactly
+% Using tabular for natural width, then resizebox to target width
+\node[anchor=north] at (8.5, 1.5, 1.4) {%
+    \resizebox{7.2cm}{!}{%
+        \begin{tabular}[t]{@{}l@{}}
+        \sffamily\bfseries Hamiltonian (canonical)\\
+        \sffamily\bfseries analysis toolkit for xAct
+        \end{tabular}%
+    }%
+};
 
 \end{tikzpicture}
 \end{document}
